Fix Spacing on title and back button on signing-bee page

--- a/HarrisonNiswanderPortfolio/src/pages/Portfolio/Signing-Bee/signing-bee_styles/signing-bee.css
+++ b/HarrisonNiswanderPortfolio/src/pages/Portfolio/Signing-Bee/signing-bee_styles/signing-bee.css
@@ -47,7 +47,7 @@ h2 {
 .sb-title {
   display: flexbox;
   flex-direction: row;
-  margin: -2rem auto;
+  margin: 1rem auto;
   margin-bottom: 0.3em;
   padding-bottom: 0.3em;
   padding-left: 1.3em;
